--- a/Session1_HW/hi.html
+++ b/Session1_HW/hi.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Terminal - Your Source for Fact-Based News</title>
+    <link href="https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansLight.woff" rel="stylesheet">
+    <link rel="stylesheet" href="hi.css">
     <title>Document</title>
 </head>
 <body>
-    <div></div>
+
+    <div id="banner">
+        <video muted autoplay loop>
+            <source src="동영상.mp4" type="video/mp4">
+            <strong>Your browser does not support the video tag.</strong>
+        </video>
+        <div class="content">
+            <h1>안녕하세요, 이유진입니다. <br> 일이 삶이 되어도 좋으니<br> 온전히 미칠 수 있는 일을 하고 싶습니다</h1>
+        </div>
+    </div>
+
+    <div id="main" class="content">
+        <h3>만나서 반가워요!</h3>
+        <span class="byline">지각쟁이 사죄드립니다🥺</span>
+        <p>첫 번째 과제는 제출했었는데 그게 세션 0 과제였다는 걸 인지하지 못하고 세션 1 과제를 놓쳐서 이제야 하는 멍청이입니다 🥺
+            <br>정말정말 죄송해요ㅠ_ㅠ 우당탕탕 스타트업에 어느 정도 익숙해져서, 이젠 정말 시간을 잘 조절해서 과제도 꼭 잘 하겠습니다!
+        </p>
+
+        <p>18학번 스물다섯 살이 MT에 갈 수 있다니 너무너무 설레요..! 동기들의 부러움을 사는 중입니다 ㅎㅎ
+            <br>19년도에는 과 학생회장을 해서 MT의 기억들이 열심히 일한 것들뿐인데 이번엔 신나게 놀아보나 기대 중입니다 😎 
+            <br>술은 잘 못하지만 술자리는 매우매우 좋아해요~❤️
+            <br>우당탕탕 스타트업 적응 좀 했으니 앞으로는 MT뿐만 아니라 모임이나 술자리도 잘 나가보겠습니다! 😉
+            <br>
+        </p>
+
+        <div class="pull-quote">
+            <h2>사회학과 18학번 이유진
+                <br>생일: 3월이면 3이 3개! 3월 3^3일 ^-^
+                <br>MBTI: ENTP
+                <br>인스타: @reason_jinny
+                <br>좋아하는 것: LCK, 스타트업, 꿈꾸는 사람들
+                <br>우당탕탕 스타트업: 
+                <a href="https://surfee.co.kr/" target="_blank">노코드 랜딩페이지 제작 툴 Surfee</a>
+            </h2>
+        </div>
+
+        <p>금요일에 만나요~</p>
+        <br>
+    </div>
+
+    <div class="share">
+        <a href="https://surfee.co.kr/">Surfee</a>
+        <a href="https://www.instagram.com/reason_jinny/">Instagram</a>
+    </div>
+
 </body>
+
 </html>
